template_and_constraint/k8spaulodebug.constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPauloDebug
metadata:
  name: k8spaulodebug
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    name: k8spaulodebug
