template_and_constraint/k8spaulodebug.constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spaulodebug
spec:
  crd:
    spec:
      names:
        kind: K8sPauloDebug
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spaulodebug

        violation[{"msg": msg}] {
          msg := sprintf("REVIEW OBJECT: %v", [input.review])
        }
